# tarotclub

./: .directory  .gitignore  .gitmodules  .travis.yml  HISTORY.md  Makefile  README.md  TODO.md  console.pro  desktop.pro
android/: .directory  .gitignore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  file_server.cpp  tarotclub_main.c
android/app/src/main/java/fr/tarotclub/TarotClub/: JniHandler.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/html/3d_assets/: card.js  card.mtl
assets/html/js/: BoardController.js  main.js
assets/ts/: tarotclub_fr.qm  tarotclub_fr.ts
console/: Console.cpp  Console.h  ConsoleClient.cpp  ConsoleClient.h  Embedded.h  bin2hex.pl  main.cpp  template.txt
doc/: protocol.md
packaging/windows/: install_innosetup.iss
quality/coverage/: coverage.pl  run.bat
quality/cppcheck/: tarotclub.cppcheck
src/: BasicClient.cpp  BasicClient.h  Bot.cpp  Bot.h  BotManager.cpp  BotManager.h  Card.cpp  Card.h  ClientConfig.cpp  Common.cpp  Common.h  Deal.cpp  Deal.h  DealFile.cpp  DealFile.h  Deck.cpp  Deck.h  Engine.cpp  Engine.h  Identity.h  Lobby.cpp  Lobby.h  Network.cpp  Network.h  Player.cpp  PlayingTable.cpp  PlayingTable.h  Protocol.cpp  Protocol.h  Score.cpp  Score.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  Session.cpp  Session.h  System.cpp  TournamentConfig.cpp  Users.cpp  (+2 more)
src/console/: ConsoleClient.h  console.pro  gen.bat
src/desktop/: MainWindow.cpp  desktop.pro
src/desktop/docks/: DebugDock.h  ScoresDock.cpp
src/desktop/windows/: DealsWindow.cpp  EditorWindow.cpp  OptionsWindow.cpp  ScoreCalculatorWindow.cpp
src/gfxlib/: Canvas.cpp  GfxCard.h  PopupItem.cpp  RectBase.h  TarotWidget.cpp  TarotWidget.h  TextBox.cpp
src/icl/: icl.pri  icl.vcxproj  icl.vcxproj.filters
src/icl/jsengine/: JSEngine.cpp  JSEngine.h
src/icl/json/: JsonReader.cpp  JsonValue.h
src/icl/network/: TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h
src/icl/protocol/: Http.cpp
src/icl/util/: Console.cpp  Log.cpp  Log.h  Util.cpp  Util.h
src/tarotclub-bot/: main.cpp  tarotclub-bot.pro
src/tarotclub-cli/: Console.cpp  ConsoleClient.cpp  ConsoleClient.h  main.cpp  tarotclub-cli.pro  tarotclub-cli.sln  tarotclub-cli.vcxproj  tarotclub-cli.vcxproj.filters
src/tarotclub-gui/: Defines.h  MainWindow.cpp  MainWindow.h  main.cpp  tarotclub-gui  tarotclub-gui.pro  tarotclub-gui.pro.user.7e93c85
src/tarotclub-gui/docks/: ChatDock.cpp  ChatDock.h  DebugDock.cpp  DebugDock.h  InfosDock.cpp  InfosDock.h  LobbyDock.cpp  LobbyDock.h  ScoresDock.cpp  ScoresDock.h
src/tarotclub-gui/forms/: AboutUI.ui  DealEditorUI.ui  ImportAvatar.ui  InfosDockUI.ui  NewTurnUI.ui  NumberedDealUI.ui  OptionsUI.ui  QuickJoin.ui  ScoreCalculatorUI.ui
src/tarotclub-gui/windows/: AboutWindow.cpp  AboutWindow.h  DealsWindow.cpp  DealsWindow.h  EditorWindow.cpp  EditorWindow.h  ImportAvatarWindow.cpp  ImportAvatarWindow.h  NewTurnWindow.cpp  NewTurnWindow.h  OptionsWindow.cpp  OptionsWindow.h  ScoreCalculatorWindow.cpp  ScoreCalculatorWindow.h
src/tarotclub-srv/: Console.cpp  Console.h  IService.h  Server.cpp  Server.h  ServiceAiContest.cpp  ServiceAiContest.h  ServiceStats.cpp  ServiceStats.h  ServiceWebsiteConnection.cpp  ServiceWebsiteConnection.h  SrvAiContest.cpp  SrvAiContest.h  SrvStats.cpp  SrvStats.h  TCDS.md  Terminal.cpp  Terminal.h  Version.h  main.cpp  tarotclub-srv.pro  tls_client.cpp  tls_client.h
src/tarotclub-tst/: main.cpp  tarotclub-tst.pro  tarotclub.json  tcds.json  tst_tarot_3_and_5_players.cpp  tst_tarot_3_and_5_players.h  tst_tarot_base.cpp  tst_tarot_base.h  tst_tarot_protocol.cpp  tst_tarot_protocol.h  tst_tarot_rules.cpp  tst_tarot_rules.h  unit_test_current_deal.json
src/wasm/: Makefile  index.html  main.cpp
tests/: testu.pro
tests/src/: main.cpp  tst_tarot_base.cpp  tst_tarot_protocol.cpp  tst_tarot_protocol.h  tst_tarot_rules.cpp
tools/: embed.pl  gen.sh
www/: README.md  app.js  package.json
www/blog/: 2015-01-31-nouveau-site-web.md  2015-04-12-ouverture-des-comptes-utilisateurs.md  2015-05-25-lancement-du-concours-ia.md  2015-06-25-version-2.6.2-disponible.md  2017-05-01-version-2.7.0-disponible.md
www/etc/: tarotclubweb.service
www/lib/: database.js  email.js
www/routes/: doc.js  home.js  ranking.js  user.js
www/views/: layout.hbs
www/views/pages/: index.hbs
